style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Segoe UI', sans-serif;
}

body {
    counter-reset: project;
}

header {
    background-color: teal;
    color: azure;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 15px;
}

h2 {
    text-align: center;
}

#projects {
    max-width: 600px;
    margin: 10px auto;
    border-radius: 20px;
    overflow: hidden;
}

.row {
    padding: 5px 25px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    text-decoration: none;
    color: #000;
    background-color: #fafafa;
    cursor: pointer;
}

.row:nth-child(odd) {
    background-color: #cfdfdf;
}

.row:hover {
    background-color: #77cdcd;
}

.col {
    width: 33.3%;
}

.col .title {
    font-weight: 600;
}

.col .title::before {
    counter-increment: project;
    content: counter(project);
    margin-right: 10px;
}

.col .date {
    display: block;
    text-align: center;
}

.col:last-child {
    display: flex;
    justify-content: flex-end;
}

.col .tech {
    width: 35px;
    margin: 0 3px;
    border-radius: 50%;
}

footer {
    padding: 25px;
    background-color: teal;
    text-align: center;
}

footer a {
    color: #fff;
}

footer a:hover {
    color: #ccf;
}

